<resources>
    <string name="app_name">Waves Of Food</string>
    <string name="deliver_favourite_food">Deliver Favourite Food</string>
    <string name="designed_by">Designed by \n Neat Roots</string>
    <string name="logo_description">Waves of Food Logo</string>
    <string name="next">Next</string>
    <string name="email_hint">Email or Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="location_text">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>