<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/deliver_favourite_food"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Sign Up Here"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/user"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="Name"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Or"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Sign Up With"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:paddingLeft="15dp"
        android:background="@drawable/white_button"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_bold"
        android:text="Facebook"
        android:drawableLeft="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_button"
        android:drawableLeft="@drawable/google_icon"
        android:fontFamily="@font/lato_bold"
        android:paddingLeft="15dp"
        android:text="Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAcountButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_button_gredient"
        android:fontFamily="@font/yeonsung_regular"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/haveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="Already Have An Account?"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/createAcountButton"
        app:layout_constraintStart_toStartOf="@+id/createAcountButton"
        app:layout_constraintTop_toBottomOf="@+id/createAcountButton" />


</androidx.constraintlayout.widget.ConstraintLayout>